tests/src/frontend/typechecking/invalid/capture_readonly.sk
mutable class X(mutable x: Int)

fun foo(x: mutable X): void {
  f = () ~> x;
  _x = f();
  void
}
